--- a/install.html
+++ b/install.html
@@ -122,8 +122,8 @@ ul.task-list li input[type="checkbox"] {
   <li><a href="#install-qgis" id="toc-install-qgis" class="nav-link active" data-scroll-target="#install-qgis">1. Install QGIS</a></li>
   <li><a href="#install-the-qgis-plugin" id="toc-install-the-qgis-plugin" class="nav-link" data-scroll-target="#install-the-qgis-plugin">2. Install the QGIS plugin</a>
   <ul class="collapse">
-  <li><a href="#method-a-from-the-qgis-plugin-database" id="toc-method-a-from-the-qgis-plugin-database" class="nav-link" data-scroll-target="#method-a-from-the-qgis-plugin-database">Method A: From the QGIS plugin database</a></li>
-  <li><a href="#method-b-from-zip-file-recommended-for-now" id="toc-method-b-from-zip-file-recommended-for-now" class="nav-link" data-scroll-target="#method-b-from-zip-file-recommended-for-now">Method B: From ZIP file (recommended for now)</a></li>
+  <li><a href="#method-a-from-the-qgis-plugin-database-recommended" id="toc-method-a-from-the-qgis-plugin-database-recommended" class="nav-link" data-scroll-target="#method-a-from-the-qgis-plugin-database-recommended">Method A: From the QGIS plugin database (recommended)</a></li>
+  <li><a href="#method-b-from-zip-file" id="toc-method-b-from-zip-file" class="nav-link" data-scroll-target="#method-b-from-zip-file">Method B: From ZIP file</a></li>
   </ul></li>
   <li><a href="#install-the-timml-and-ttim-server" id="toc-install-the-timml-and-ttim-server" class="nav-link" data-scroll-target="#install-the-timml-and-ttim-server">3. Install the TimML and TTim server</a>
   <ul class="collapse">
@@ -160,9 +160,8 @@ ul.task-list li input[type="checkbox"] {
 </section>
 <section id="install-the-qgis-plugin" class="level2">
 <h2 class="anchored" data-anchor-id="install-the-qgis-plugin">2. Install the QGIS plugin</h2>
-<section id="method-a-from-the-qgis-plugin-database" class="level3">
-<h3 class="anchored" data-anchor-id="method-a-from-the-qgis-plugin-database">Method A: From the QGIS plugin database</h3>
-<p><strong>NB</strong> Due to ongoing developments new features and bug fixes might not be part of this release. Consider installation method B.</p>
+<section id="method-a-from-the-qgis-plugin-database-recommended" class="level3">
+<h3 class="anchored" data-anchor-id="method-a-from-the-qgis-plugin-database-recommended">Method A: From the QGIS plugin database (recommended)</h3>
 <ol type="1">
 <li>Open QGIS.</li>
 <li>At the top, find the Plugins menu (~sixth object in the menubar).</li>
@@ -172,8 +171,8 @@ ul.task-list li input[type="checkbox"] {
 <li>Click "Install Plugin".</li>
 </ol>
 </section>
-<section id="method-b-from-zip-file-recommended-for-now" class="level3">
-<h3 class="anchored" data-anchor-id="method-b-from-zip-file-recommended-for-now">Method B: From ZIP file (recommended for now)</h3>
+<section id="method-b-from-zip-file" class="level3">
+<h3 class="anchored" data-anchor-id="method-b-from-zip-file">Method B: From ZIP file</h3>
 <ol type="1">
 <li>Download the "QGIS-Tim-plugin.zip" from the <a href="https://github.com/Deltares/QGIS-Tim/releases">GitHub Releases page</a> (do not unzip!).</li>
 <li>Open QGIS.</li>
@@ -203,6 +202,7 @@ ul.task-list li input[type="checkbox"] {
 <p>Specific releases can also be manually downloaded from the <a href="https://github.com/Deltares/QGIS-Tim/releases">GitHub Releases page</a>:</p>
 <ol type="1">
 <li>Download the gistim ZIP file for your platform: Windows, macOS, or Linux.</li>
+<li>Start the QGIS-Tim plugin by clicking the QGIS-Tim icon in the toolbar.</li>
 <li>Find and click the “Install TimML and TTim server” button at the bottom of the plugin window.</li>
 <li>Set the path to the downloaded ZIP file in the “Install from ZIP file” section.</li>
 <li>Click the “Install” button.</li>
