deploy: fdc4ae30981683c8e88423268aaae6d1cee62984

--- a/tutorial_Rijsenhout.html
+++ b/tutorial_Rijsenhout.html
@@ -316,8 +316,8 @@ ul.task-list li input[type="checkbox"] {
 </ul>
 <p>Further in this Tutorial we will use some default toolbars that might be hidden at the moment. Let’s check that and unhide if necessary.</p>
 <ol start="15" class="example" type="1">
-<li>Select <em>View</em> from the main menu and choose <em>Toolbars</em>.</li>
-<li>Be sure the “Advanced Digitizing Toolbar”, the “Snapping Toolbar” and the “Attributes Toolbar” are checked.</li>
+<li>Select <em>View</em> from the main menu and choose <em>Panels</em> and be sure these two toolbars are checked: <br> - Layers; <br> - Browser.</li>
+<li>Select <em>View</em> from the main menu and choose <em>Toolbars</em> and be sure these three toolbars are checked: <br> - Advanced Digitizing Toolbar; <br> - Snapping Toolbar; <br> - Attributes Toolbar.</li>
 </ol>
 </section>
 <section id="prepare-your-project" class="level3">
